# ShapesEngine3

./: .gitignore  .gitmodules  CMakeLists.txt
assets/configs/: managers.xml  materials.xml  meshes.xml  shaders.xml
assets/materials/: default.xml
assets/shaders/: default.frag  default.vert
src/: main.cpp
src/Common/: Assert.h  FilePath.cpp  FilePath.h  Singleton.cpp  Singleton.h  Storage.cpp  Storage.h  UsingPtrsMacro.h
src/Components/: Component.cpp  Component.h  TestComponent.cpp  TestComponent.h
src/Engine/: Application.cpp  Application.h  Engine.cpp  Engine.h
src/Enums/: EnumMacro.h  EnumUtils.cpp  EnumUtils.h  InputEventTypeEnum.h  KeyModeEnum.h  MouseButtonEnum.h  SceneObjectStatesEnum.h
src/Factory/: GlobalFactory.h
src/Graphics/: Material.cpp  Material.h  MaterialsManager.cpp  MaterialsManager.h  Mesh.cpp  Mesh.h  MeshData.h  MeshesManager.cpp  MeshesManager.h  RenderCommand.cpp  RenderCommand.h  RenderQueue.cpp  RenderQueue.h  ShaderProgram.cpp  ShaderProgram.h  ShadersManager.cpp  ShadersManager.h
src/Logger/: Logger.cpp  Logger.h
src/Managers/: ManagersController.cpp  ManagersController.h  ManagersFactory.cpp  ManagersFactory.h  ManagersFactoryRegistration.h  ManagersListLoader.cpp  ManagersListLoader.h
src/Math/: Mat.h  Mat2.h  Mat3.h  Mat4.h  Math.h  Quat.h  Rect.h  RectImpl.h  Transform.cpp  Transform.h  Vec.h  Vec2.h  Vec3.h  Vec4.h
src/Messenger/: ISubscriptionWrapper.h  Messenger.cpp  Messenger.h  SubscriptionWrapper.h  SubscriptionsContainer.cpp  SubscriptionsContainer.h
src/OpenGL/: GLSLShaderProgram.cpp  GLSLShaderProgram.h  (+8 more)
(+83 files in other folders)
